--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 <body>
 	<br>
 	<center>
-		<h2>ECCV 2024</h2>
-		<h1 style="color:red;">Every Pixel Has its Moments: Ultra-High-Resolution Unpaired Image-to-Image Translation via Dense Normalization</h1>
+		<h2 style="color:red;">ECCV 2024</h2>
+        <h1>Every Pixel Has its Moments: Ultra-High-Resolution Unpaired Image-to-Image Translation via Dense Normalization</h1>
 		<table align=center width=800px>
 			<table align=center width=850px>
 				<tr>
