--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	</center>
 	<hr>
 	<table align=center width=850px>
-		<center><h1>DEMO</h1></center>
+		<center><h1>DEMO (4032x3024 pixels)</h1></center>
 		<center>
 			<div class="twentytwenty-container">
 				<div class="cmpcontent">
